2008-08-11  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinynbr.el (mapcar): Update to modern backquote.

	* tiny/tinyurl.el
	- Use `string-to-number'
	(tinyurl-command-table-before-string): Update to
	modern backquote.
	(tinyurl-handler-mail-after): Add 2nd arg to `throw'.
	(tinyurl-overlay-kill-in-buffer): Remove 2nd copy of this function.
	(tinyurl-overlay-kill): Remove 2nd copy of this function.
	(turn-on-tinyurl-mode-automatically): Check boundp
	`tinyurl-:mode-global-turned-off'.

	* tiny/tinytab.el (tinytab-message): Update to modern backquote.

	* tiny/tinymail.el (tinymail-:complete-bbdb-case-fold-search): Fix
	defcustom.
	(tinymail-mail-aliases): Update to modern backquote.
	(tinymail-gpg-recipient): Correct to_field => `to-field'.
	(tinymail-gpg-recipient): Check boundp `message-has-gpg'.
	(tinymail-gpg-recipient): Correct `eq major-mode' test.

	* tiny/tinylibb.el (with-temp-buffer): Update to modern backquote.
	(with-output-to-string): Update to modern backquote.
	(fboundp): Update to modern backquote.
	(save-current-buffer): Update to modern backquote.
	(with-current-buffer): Update to modern backquote.
	(ti::compat-character-define-macro): Update to modern backquote.
	(w32-cygwin-mount-table-dolist): Update to modern backquote.
	(w32-cygwin-shell-environment): Update to modern backquote.
	(custom): Update to modern backquote.

	* tiny/tinyigrep.el
	- Byte comile fix: Add %d %s to all calls using `tinyigrep-countdown'
	(ti::expand-file-name-cygwin-macro): Update to
	modern backquote.
	(tinyigrep-install-database-lisp-texi-lazy): Update to modern
	backquote.
	(top level): Use `string-to-number'.
	(tinyigrep-:grep-program): Fix defgroup.
	(tinyigrep-:grep-word-at-point): Fix defgroup.
	(tinyigrep-install-database-lisp-packages-lazy): Update to modern
	backquote.
	(tinyigrep-install-database-lisp-flag-files-lazy): Update to modern
	backquote.
	(tinyigrep-:igrep-previous-args): Change to `defvar'.
