@@ -1,5 +1,8 @@
 2008-08-11  Jari Aalto  <jari.aalto@cante.net>
 
+	* tiny/tinybuffer.el (tinybuffer-iswitch-next): Update to modern backquote.
+	(tinybuffer-iswitch-previous): Update to modern backquote.
+
 	* tiny/tinynbr.el (mapcar): Update to modern backquote.
 
 	* tiny/tinyurl.el
